google oauth callback fix

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,5 +5,5 @@
    <button type="submit"> Submit </button>
 </form>
 <form action="/auth/google" method="GET">
-    <button type="submit"> llogin with google </button>
+    <button type="submit"> continue with google </button>
  </form>
