--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,5 +5,6 @@
    <button type="submit"> Submit </button>
 </form>
 <form action="/auth/google" method="GET">
-    <button type="submit"> continue with google </button>
+   <!-- Username for Google <input type = "text" name = "username" >  -->
+   <button type="submit"> continue with google </button>
  </form>
